--- a/StreamGo-frontend/src/app/pages-public/peliculas/peliculas.scss
+++ b/StreamGo-frontend/src/app/pages-public/peliculas/peliculas.scss
@@ -253,6 +253,9 @@
   margin: 6px 0 8px;
   color: white;
   line-height: 1.3;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .card-meta {
